# wildlife_at_home

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Mobile/: .project  manifest  tiapp.xml
Mobile/Resources/: app.js
boinc_daemons/: CMakeLists.txt  crowd_observation_validator.cxx  crowd_observation_validator_new.cxx  wildlife_assimilation_policy.cxx  wildlife_bgsub_assimilation_policy.cxx  wildlife_bgsub_validation_policy.cxx  wildlife_surf_collect_assimilation_policy.cxx  wildlife_surf_collect_validation_policy.cxx  wildlife_validation_policy.cxx  wildlife_work_generator.cxx
client/: CMakeLists.txt  README  README_2.rtf  compile_average_osx.sh  compile_linux_x86_64.sh  compile_surf_collect_osx.sh  compile_surf_linux.sh  compile_surf_linux2.sh  compile_surf_osx.sh  file_io.cpp  file_io.hpp  makefile  wildlife.cpp  wildlife_average.cpp  wildlife_feature_comparison.cpp  wildlife_feature_extractor.cpp  wildlife_feature_matcher.cpp  wildlife_graphics_app.cpp  wildlife_surf.cpp  wildlife_surf_analyze.cpp  wildlife_surf_collect.cpp  wildlife_surf_collect_clean.cpp  wildlife_surf_collect_feats.cpp  wildlife_surf_combine.cpp  wildlife_surf_combine_feats.cpp  wildlife_surf_predict.cpp  wildlife_surf_svm_generate.cpp
client/cmake/Modules/: FindBOINC.cmake  FindFTGL.cmake  FindFreetype.cmake
daemons/: get_mosaic_images.php  set_mosaic_completed.php  shift_images.php
data_analysis/: get_classification_data.php
data_releases/: 2015_grouse_ids.txt  2015_tern_plover_ids.txt
include/: Event.hpp  EventType.hpp  VideoType.hpp  boinc_utils.hpp  cvplot.hpp  utils.hpp  wildlife_graphics.hpp  wildlife_surf.hpp
source/: Event.cpp  EventType.cpp  VideoType.cpp  boinc_utils.cpp  cvplot.cpp  utils.cpp
video_archive_daemons/: delete_spammer.php  detect_new_video.php  exif_script.pl  expert_volunteer_match_count.php  export_badges.php  fix_md5_and_size.php  fix_segment_duration.php  fix_species_script.pl  fix_user_obs_count.php  fix_watched_count.php  generate_ogg_video.php  generate_streaming_videos.php  image_watermark_daemon.php  split_video_daemon.php  sync_hodor.php  table_new_interface_accuracy.php  table_old_interface_accuracy.php  upgrade_per_app_credit.php  video_conversion_daemon.php  video_conversion_daemon_new.php  video_conversion_job.py  video_discovery_daemon.php  watermark_video_daemon.php  watermark_video_daemon_ogv.php
webpage/: about_page.php  accuracy_computed.php  accuracy_computed_consensus.php  accuracy_computed_consensus_table.php  accuracy_computed_type.php  accuracy_computed_type_consensus.php  accuracy_computed_type_consensus_table.php  accuracy_computed_type_grouse.php  accuracy_computed_type_grouse_table.php  accuracy_computed_type_table.php  accuracy_computed_type_users.php  accuracy_computed_type_users_grouse_table.php  accuracy_computed_type_users_table.php  alicia_project.php  award_credit.inc  badge_list.php  becca_grouse_project.php  boinc_instructions.php  boinc_stats_bgsub.php  bootstrap_scripts.html  canvas_select.php  canvas_submission.php  canvas_test.js  canvas_test.php  charts.php  correctness.php  correctness_computed.php  correctness_difficulty.php  correctness_species_type.php  correctness_type.php  correctness_type_table.php  correctness_user.php  correctness_vs_event_length.php  correctness_vs_event_length_2.php  custom.css  data_releases.php  david_iles_project.php  difficulty.php  display_badges.php  ducks_unlimited_project.php  (+114 more)
webpage/clips_grouse/: VideoClipData.xlsx  Wildlife@Home_Original_Video_Clip_Data_Sheet.xlsx  convert.sh
webpage/clips_grouse/BEL_2012/: 148.954_48.11126_102.440147.ogv  149.085_48.06332_102.44829.ogv  149.495_48.05411_102.4242.ogv  149.723_48.12235_102.38943.ogv  149.733_48.06872_102.41512.ogv  149.772_48.11158_102.44098.ogv  149.783_48.12148_102.39020.ogv  149.801_48.07501_102.3787.ogv  149.823_48.0599_102.39538.ogv  149.892_48.12108_102.39192.ogv  150.462_48.10577_102.43574.ogv
webpage/clips_grouse/BEL_2013/: 148.203_48.13689_102.38178.ogv  148.222_48.11228_102.44405.ogv  149.052_48.13511_102.38803.ogv  149.554_48.11663_102.47623.ogv  149.573_48.1223_102.3886.ogv  149.573_48.12436_102.38857.ogv  149.744_48.145075_102.39126.ogv  149.783_48.12209_102.38947.ogv  149.793_48.14372_102.38706.ogv  (+9 more)
webpage/css/: custom.css
webpage/data_interface/: download.php  download_bg.php  download_idx.php  download_msi_csv.php  extract_msi.php  form.php  generate_bg.php  generate_idx.php  generate_msi_csv.php  generate_msi_locations.php  generate_testing.php  index.php  merge_idx.php  parse.php  status.php
webpage/expert_interface/: get_animal_ids.php  get_expert_count_nav.php  get_expert_videos.php  toggle_expert_flag.php  toggle_private_video.php
webpage/images/: .gitignore
webpage/js/: canvas_selector.js  canvas_test.js  data_download.js  expert_review.js  google_chart_utils.js  js  leaflet_practice.js  review_image.js  review_videos.js  user_review.js
webpage/projects/: alicia_project.php
webpage/publications/: HS-Module.docx  MS-Module.docx  publications
webpage/review_interface/: review_interface  submit_report.php  submit_response.php
webpage/templates/: event_instructions_template.html  expert_list_template.html  expert_row_template.html  finished_video_modal.html  image_projects_template.html  k5.html  observation_table_template.html  observations_export_table.html  projects_template.html  row_template.html  species_description.html  species_description_popup.html  tag_row_template.html  training_template.html  watch_template.html  wildlife_info.html
webpage/watch_interface/: event_dropdown.php  event_instructions.php  events.php  finished_video.php  get_expert_video.php  get_tag_dropdowns.php  get_timed_observations.php  new_timed_observation.php  next_video.php  observation_table.php  remove_timed_observation.php  revalidate_video.php  skip_video.php  update_difficulty.php  update_timed_observation.php
webpage/wildlife_badges/: wildlife_badges
webpage/wildlife_css/: canvas_test.css  custom.css  education_style.css  flora_and_fauna.css  leaflet.css  review_image.css
(+59 files in other folders)
